docs/versioned_docs/version-1.8.0/Get-Started/get-started-installation.mdx
---
title: Install EarthMind
slug: /get-started-installation
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

EarthMind can be installed in multiple ways:

* [**EarthMind Desktop (Recommended)**](#install-and-run-earthmind-desktop): Download and install the standalone desktop application for the least complicated setup experience.
This option includes dependency management and facilitated upgrades.

* [**Docker**](#install-and-run-earthmind-docker): Pull and run the EarthMind Docker image to start a EarthMind container and run EarthMind in isolation.

* [**Python package**](#install-and-run-the-earthmind-oss-python-package): Install and run the EarthMind OSS Python package.
This option offers more control over the environment, dependencies, and versioning.

* [**Install from source**](/contributing-how-to-contribute#install-earthmind-from-source): Use this option if you want to contribute to the EarthMind codebase or documentation.

## Install and run EarthMind Desktop

EarthMind Desktop is a desktop version of EarthMind that simplifies dependency management and upgrades.
However, some features aren't available for EarthMind Desktop, such as the **Shareable Playground** and **Voice Mode**.

<Tabs>
<TabItem value="macos" label="macOS" default>

EarthMind Desktop requires macOS 13 or later.

1. Navigate to [EarthMind Desktop](https://www.earthmind.org/desktop).
2. Click **Download EarthMind**, enter your contact information, and then click **Download**.
3. Mount and install the EarthMind application.
4. When the installation completes, open the EarthMind application, and then create your first flow with the [Quickstart](/get-started-quickstart).

</TabItem>
<TabItem value="Windows" label="Windows">

    :::warning
    If you are upgrading EarthMind Desktop on Windows, **don't** use the in-app update feature to upgrade to EarthMind version 1.6.0.
    For more information, see [Known issues for 1.6.0](/release-notes#windows-desktop-update-issue).
    :::

1. Navigate to [EarthMind Desktop](https://www.earthmind.org/desktop).
2. Click **Download EarthMind**, enter your contact information, and then click **Download**.
3. Open the **File Explorer**, and then navigate to **Downloads**.
4. Double-click the downloaded `.msi` file, and then use the install wizard to install EarthMind Desktop.

    :::tip
    Windows installations of EarthMind Desktop require a C++ compiler that may not be present on your system. If you receive a `C++ Build Tools Required!` error, follow the on-screen prompt to install Microsoft C++ Build Tools, or [install Microsoft Visual Studio](https://visualstudio.microsoft.com/downloads/).
    :::

5. When the installation completes, open the EarthMind application, and then create your first flow with the [Quickstart](/get-started-quickstart).

</TabItem>
</Tabs>

For upgrade information, see the [Release notes](/release-notes).

To manage dependencies in EarthMind Desktop, see [Install custom dependencies in EarthMind Desktop](/install-custom-dependencies#earthmind-desktop).

## Install and run EarthMind with Docker {#install-and-run-earthmind-docker}

You can use the EarthMind Docker image to start a EarthMind container.
For more information, see [Deploy EarthMind on Docker](/deployment-docker).

1. Install and start [Docker](https://docs.docker.com/).

2. Pull the latest [EarthMind Docker image](https://hub.docker.com/r/earthmindai/earthmind) and start it:

    ```bash
    docker run -p 7860:7860 earthmindai/earthmind:latest
    ```

3. To access EarthMind, navigate to `http://localhost:7860/`.

4. Create your first flow with the [Quickstart](/get-started-quickstart).

## Install and run the EarthMind OSS Python package

1. Make sure you have the required dependencies and infrastructure:

    - [Python](https://www.python.org/downloads/release/python-3100/)
       - macOS and Linux: Version 3.10 to 3.13
       - Windows: Version 3.10 to 3.12
    - [uv](https://docs.astral.sh/uv/getting-started/installation/)
    - Sufficient infrastructure:
       - Minimum: Dual-core CPU and 2 GB RAM
       - Recommended: Multi-core CPU and at least 4 GB RAM
    - Browser:
       - Google Chrome is recommended but not required

2. Create a virtual environment with [uv](https://docs.astral.sh/uv/pip/environments).

    <details>
    <summary>Need help with virtual environments?</summary>

    Virtual environments ensure EarthMind is installed in an isolated, fresh environment.
    To create a new virtual environment, do the following.

        <Tabs>
        <TabItem value="linux-macos" label="Linux or macOS" default>

        1. Navigate to where you want your virtual environment to be created, and then create it with `uv`:

            ```shell
            uv venv VENV_NAME
            ```

            Replace `VENV_NAME` with a name for your virtual environment.

        2. Start the virtual environment:

            ```shell
            source VENV_NAME/bin/activate
            ```

            Your shell's prompt changes to display that you're currently working in a virtual environment:

            ```text
            (VENV_NAME) ➜  earthmind git:(main) ✗
            ```

        3. To deactivate the virtual environment and return to your regular shell, type `deactivate`.

            When activated, the virtual environment temporarily modifies your `PATH` variable to prioritize packages installed within the virtual environment.
            To avoid conflicts with other projects, it's a good idea to deactivate your virtual environment when you're done working in it.

            To delete the virtual environment, type `rm -rf VENV_NAME`.
            This completely removes the virtual environment directory and its contents.

        </TabItem>
        <TabItem value="Windows" label="Windows">

        1. Navigate to where you want your virtual environment to be created, and create it with `uv`.

            ```shell
            uv venv VENV_NAME
            ```

            Replace `VENV_NAME` with a name for your virtual environment.

        2. Start the virtual environment:

            ```shell
            VENV_NAME\Scripts\activate
            ```

            Your shell's prompt changes to display that you're currently working in a virtual environment:

            ```text
            (VENV_NAME) PS C:/users/username/earthmind-dir>
            ```

        3. To deactivate the virtual environment and return to your regular shell, type `deactivate`.

            When activated, the virtual environment temporarily modifies your `PATH` variable to prioritize packages installed within the virtual environment.
            To avoid conflicts with other projects, it's a good idea to deactivate your virtual environment when you're done working in it.

            To delete the virtual environment, type `Remove-Item VENV_NAME`.
            This completely removes the virtual environment directory and its contents.

        </TabItem>
        </Tabs>

    </details>

3. In your virtual environment, install EarthMind:

    ```bash
    uv pip install earthmind
    ```

4. Start EarthMind:

    ```bash
    uv run earthmind run
    ```

    It can take a few minutes for EarthMind to start.

5. To confirm that a local EarthMind instance is running, navigate to the default EarthMind URL `http://127.0.0.1:7860`.

6. Create your first flow with the [Quickstart](/get-started-quickstart).

### Manage the EarthMind OSS version

To upgrade EarthMind to the latest version, run `uv pip install earthmind -U`.
However, the EarthMind team recommends taking steps to backup your existing installation before you upgrade EarthMind.
For more information, see [Prepare to upgrade](/release-notes#prepare-to-upgrade).

To install a specific version of the EarthMind package, add the required version to the command, such as `uv pip install earthmind==1.4.22`.

To reinstall EarthMind and all of its dependencies, run `uv pip install earthmind --force-reinstall`.

## Next steps

* [Quickstart](/get-started-quickstart): Build and run your first flow in minutes.
* [Build flows](/concepts-flows): Learn about building flows.
* [Troubleshoot EarthMind](/troubleshoot): Get help with common EarthMind install and startup issues.